# khalani.network

./: README.md  secrets.txt
repos/distributedstatemachine/causality_uniswap_project/: .gitignore  README.md  pyproject.toml  run.py
repos/distributedstatemachine/causality_uniswap_project/abi/: erc20.json  pool.json
repos/distributedstatemachine/causality_uniswap_project/terraform/: variables.tf
repos/distributedstatemachine/causality_uniswap_project/tests/: test_liquidity.py  test_uniswap.py
repos/distributedstatemachine/causality_uniswap_project/uniswap_position/: config.py  uniswap_position_utils.py
repos/distributedstatemachine/causality_uniswap_project/uniswap_v3/: uniswap_liquidity.py  uniswap_position_utils.py
repos/distributedstatemachine/gcloud_hub/server/: Dockerfile  download_srs_cluster.sh  generate_rsa.sh  get_ezkl.sh  pyproject.toml
repos/distributedstatemachine/uniswap_position_estimator/: .gitignore  README.md  pyproject.toml
repos/distributedstatemachine/uniswap_position_estimator/abi/: IERC20_minimal.json  erc20.json
repos/distributedstatemachine/uniswap_position_estimator/bytecode/: erc20_bytecode.txt
repos/distributedstatemachine/uniswap_position_estimator/docs/: precision_issue.md
repos/distributedstatemachine/uniswap_position_estimator/terraform/: main.tf  provider.tf  terraform.tfvars
repos/distributedstatemachine/uniswap_position_estimator/tests/: test_liquidity.py  test_uniswap.py
repos/distributedstatemachine/uniswap_position_estimator/uniswap_v3/: calculate_fees.js  client.py  config.py  package-lock.json  package.json  uniswap_liquidity.py  uniswap_position_utils.py  utils.py
repos/opentensor/substrate-ledger-py/merkleized-metadata/: Cargo.toml  pyproject.toml
repos/score-technologies/simlearn/: IDEAS.md  MISSION.md  README.md  find_lr.py  pyproject.toml  requirements.txt  test_data_loading.py
repos/score-technologies/simlearn/configs/: adapted_spatial.yaml  attack.yaml  ball_anticipation.yaml  coarse_spatial.yaml  deep.yaml  full.yaml  shallow_spatial.yaml  shallower_spatial.yaml  simple.yaml  spatial_influence.yaml  triangle.yaml
repos/score-technologies/simlearn/scripts/: adapted_spatial.sh  attack.sh  ball_anticipation.sh  coarse_spatial.sh  create_movie.sh  create_training_movie.py  deep.sh  find_lr.sh  full.sh  shallow_spatial.sh  shallower_spatial.sh  simple.sh  spatial_influence.sh  triangle.sh  visualize_influence.py
repos/score-technologies/simlearn/simlearn/: train.py  visualize.py
repos/score-technologies/simlearn/tests/: test_data.py  test_models.py  test_preprocessing.py  test_symmetry.py
repos/tvl-labs/T-Axi/tree-sitter-axi/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
repos/tvl-labs/aip-lang/: .gitignore  AipLangExamples.md  Cargo.toml  IntentCombinations.md  grammar.md
repos/tvl-labs/aip-lang/src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
repos/tvl-labs/arcadia-agents/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
repos/tvl-labs/arcadia-agents/src/: api_client.rs  bindings.rs  chain_config.rs  config.rs  event_listener.rs  main.rs  mod.rs  models.rs  refunder.rs
repos/tvl-labs/arcadia-monorepo/medusa/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config-example.toml  local-net-instructions.md
repos/tvl-labs/axi/: Cargo.toml  README.md
repos/tvl-labs/axi/axi-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
repos/tvl-labs/axi/src/: main.rs
repos/tvl-labs/axi/tests/: external_eval.rs  external_proc.rs  test.rs
repos/tvl-labs/axi/tutorial/: 4-eq.axi  README.md
repos/tvl-labs/core-proof-lang/: Cargo.toml
repos/tvl-labs/core-proof-lang/src/: ast.rs  lex.rs  lib.rs  parser.lalrpop
repos/tvl-labs/el-relayer/: Cargo.toml  README.md
repos/tvl-labs/el-relayer/src/: client.rs  db.rs  error.rs  main.rs  merkle.rs  run.rs  smt.rs  store.rs
repos/tvl-labs/el-sdk/: .gitignore  Cargo.toml  README.md
repos/tvl-labs/el-sdk/simple-example/: Cargo.toml
repos/tvl-labs/el-sdk/src/: bls.rs  error.rs  lib.rs  types.rs
repos/tvl-labs/gas-oracle-service/: .gitignore  Cargo.toml  Dockerfile  README.md  config.json  redeemer_config.json
repos/tvl-labs/gas-oracle-service/src/: gas_oracle_updater.rs  main.rs  redeemer_updater.rs
repos/tvl-labs/khalani-solver/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
repos/tvl-labs/khalani-solver/config/: config.json  local.toml.example  with-local.json
repos/tvl-labs/khalani-solver/cross-chain-market-maker/: Cargo.toml
repos/tvl-labs/khalani-solver/intentbook-matchmaker/: Cargo.toml
repos/tvl-labs/khalani-solver/local-dev-env/: Cargo.toml
repos/tvl-labs/khalani-solver/scripts/: run_matchmaker.sh  run_settler.sh  run_spoke_chain_caller.sh
repos/tvl-labs/khalani-solver/solver-common/: Cargo.toml
repos/tvl-labs/khalani-solver/spoke-chain-caller/: Cargo.toml
repos/tvl-labs/khalani-solver/swap-intent-settler/: Cargo.toml
repos/tvl-labs/medusa/: Cargo.toml  README.md
repos/tvl-labs/medusa-api-server/: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  docker-compose.yml  solver-config.toml  test.config.toml
repos/tvl-labs/medusa-api-server/config/: dev.toml
repos/tvl-labs/medusa-api-server/src/: balance_monitor.rs  config.rs  key_manager.rs  lib.rs  main.rs  metrics_wal.rs
repos/tvl-labs/medusa-types/: Cargo.toml
repos/tvl-labs/medusa-types/src/: conversion.rs  intents.rs  lib.rs  receipt.rs  refinement.rs  solution.rs  ws.rs
repos/tvl-labs/medusa/src/: errors.rs  main.rs  models.rs
repos/tvl-labs/mirax/: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  deny.toml  rustfmt.toml
repos/tvl-labs/mirax-verification-api/: Cargo.toml  Dockerfile  README.md
repos/tvl-labs/mirax-verification-client/: Cargo.toml  README.md
repos/tvl-labs/serde-bench/: .gitignore  Cargo.toml
repos/tvl-labs/valid_gpt/: .gitignore  Cargo.toml  README.md  test.tex  test6.tex
(+30317 files in other folders)
