[package]
name = "refunder-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.24", features = ["http-client"] }
ethers = { version = "2.0", features = ["ws", "abigen"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hex = "0.4"
rustc-hash = "2.1.1"
anyhow = "1.0"
toml = "0.8"
aws-config = "1.0"
aws-sdk-secretsmanager = "1.0"
aws-types = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
