[package]
name = "axi-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.dependencies]
ariadne = "0.5.0"

[features]
default = ["sandbox"]
# Seccomp sandbox, supported on linux x86_64, aarch64 and riscv64.
sandbox = ["seccompiler", "libc"]
test-parser = ["axi-parser/test-parser"]

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
axi-core-semantics = { version = "0.1.0", path = "crates/core", features = ["ariadne"] }
axi-parser = { version = "0.1.0", path = "crates/parse", features = ["ariadne"] }
ariadne = { workspace = true }
seccompiler = { version = "0.5.0", optional = true }
libc = { version = "0.2.170", optional = true }

[dev-dependencies]
assert_cmd = "2.0.13"

[profile.release]
lto = "thin"
strip = true
