[package]
name = "gas-oracle-service"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["abigen", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rusoto_kms = { version = "0.48", default-features = false, features = ["rustls"], optional = true }
rusoto_signature = { version = "0.48", optional = true }

[features]
default = []
aws = ["rusoto_kms", "rusoto_signature", "ethers/aws"]
