[package]
name = "medusa"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
axum = { version = "0.7.4", features = ["macros"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
async-trait = "0.1.77"
once_cell = "1.19.0"
thiserror = "1.0.57"
