[package]
name = "mirax-verification-client"
version = "0.1.0"
edition = "2024"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
alloy-primitives = { version = "0.8.22", features = ["serde"] }
anyhow = "1.0.97"
bcs = "0.1.6"
blake3 = "1.6.1"
bytes = "1.10.0"
hex = "0.4.3"
once_cell = "1.20.3"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"

[dev-dependencies]
secp256k1 = { version = "0.30.0", features = ["global-context", "rand", "recovery"] }
tokio = { version = "1.43.0", features = ["full"] }
