[package]
name = "mirax"
license = "MIT"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "core/api",
  "core/chain",
  "core/cli",
  "core/config",
  "core/consensus",
  "core/consensus/narwhal",
  "core/consensus/traits",
  "core/db",
  "core/mempool",
  "core/network",
  "core/signer",
  "core/spec",
  "core/storage",
  "core/storage/traits",
  "core/verification",
  "utils/cache",
  "utils/codec",
  "utils/compat",
  "utils/crypto",
  "utils/error",
  "utils/graphql-types",
  "utils/hasher",
  "utils/indexer",
  "utils/jsonrpc-types",
  "utils/logger",
  "utils/merkle",
  "utils/metrics",
  "utils/parser",
  "utils/primitive",
  "utils/signal",
  "utils/time",
  "utils/types",
  "utils/version",
]

[workspace.dependencies]
# The following are the rust crates that in lexicographical order
ariadne = "0.5"
axi-core-semantics = { git = "ssh://git@github.com/tvl-labs/axi.git" }
axi-parser = { git = "ssh://git@github.com/tvl-labs/axi.git" }
# axi-core-semantics = { path = "../axi/crates/core" }
# axi-parser = { path = "../axi/crates/parse" }
alloy-primitives = { version = "0.8", features = ["rand", "serde"] }
anyhow = "1.0"
arc-swap = { version = "1.7", features = ["serde"] }
asynchronous-codec = "0.7"
async-graphql = { version = "7.0", features = ["tokio-sync"] }
async-graphql-axum = "7.0"
async-lock = "3.4"
async-trait = "0.1"
axum = { version = "0.8", features = ["tokio"] }
backtrace = "0.3"
base64 = "0.22"
bcs = { version = "0.2", git = "https://github.com/tvl-labs/bcs.git" }
bit-vec = { version = "0.8", features = ["serde"] }
blake3 = { version = "1.6", features = ["serde", "zeroize"] }
bloomfilter = { version = "1.0", features = ["serde", "random"] }
blst = "0.3"
bytes = { version = "1.10", features = ["serde"] }
chrono = "0.4"
ckb-hash = { version = "0.121", default-features = false }
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
crossbeam = "0.8"
dashmap = { version = "6.1", features = ["rayon", "serde"] }
derive_builder = "0.20"
derive_more = { version = "2.0", features = ["full"] }
ed25519-consensus = { version = "2.1", features = ["serde"] }
either = "1.15"
env_logger = "0.11"
faster-hex = "0.10"
flume = "0.11"
futures = "0.3"
futures-util = "0.3"
im = "15.1"
itertools = "0.14"
jsonrpsee = { version = "0.24", features = ["full"] }
libc = "0.2"
libp2p = { version = "0.53", features = [
  "ed25519",
  "identify",
  "macros",
  "noise",
  "ping",
  "quic",
  "tokio",
  "yamux",
] }
log = "0.4"
log4rs = "1.3"
merkle-mountain-range = { package = "ckb-merkle-mountain-range", version = "0.6" }
merkle-cbt = "0.3"
minstant = "0.1"
moka = { version = "0.12", features = ["sync"] }
multi_index_map = "0.11"
num = { version = "0.4", default-features = false }
once_cell = "1.21"
parking_lot = "0.12"
pin-project = "1.1"
proc-macro2 = "1.0"
prometheus = "0.13"
quick_cache = "0.6"
quote = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
rocksdb = { package = "ckb-rocksdb", version = "0.22" }
schnellru = "0.2"
secp256k1 = { version = "0.30", features = [
  "global-context",
  "rand",
  "recovery",
  "serde",
] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3", features = ["serde"] }
snap = "1.1"
syn = "2.0"
tempfile = "3.19"
thiserror = "2.0"
tokio = { version = "1.44", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
toml = "0.8"
tracing = { version = "0.1", features = ["async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trait-variant = "0.1"
zeroize = { version = "1.8", features = ["derive"] }

# The following are the core crates of Mirax
mirax-api = { path = "core/api" }
mirax-chain = { path = "core/chain" }
mirax-cli = { path = "core/cli" }
mirax-config = { path = "core/config" }
mirax-consensus = { path = "core/consensus" }
mirax-consensus-traits = { path = "core/consensus/traits" }
mirax-db = { path = "core/db" }
mirax-mempool = { path = "core/mempool" }
mirax-narwhal = { path = "core/consensus/narwhal" }
mirax-network = { path = "core/network" }
mirax-signer = { path = "core/signer" }
mirax-spec = { path = "core/spec" }
mirax-storage = { path = "core/storage" }
mirax-storage-traits = { path = "core/storage/traits" }
mirax-verification = { path = "core/verification" }

# The following are the util crates of Mirax
mirax-cache = { path = "utils/cache" }
mirax-codec = { path = "utils/codec" }
mirax-compat = { path = "utils/compat" }
mirax-crypto = { path = "utils/crypto" }
mirax-error = { path = "utils/error" }
mirax-graphql-types = { path = "utils/graphql-types" }
mirax-hasher = { path = "utils/hasher" }
mirax-jsonrpc-types = { path = "utils/jsonrpc-types" }
mirax-logger = { path = "utils/logger" }
mirax-merkle = { path = "utils/merkle" }
mirax-metrics = { path = "utils/metrics" }
mirax-parser = { path = "utils/parser" }
mirax-primitive = { path = "utils/primitive" }
mirax-signal = { path = "utils/signal" }
mirax-time = { path = "utils/time" }
mirax-types = { path = "utils/types" }
mirax-version = { path = "utils/version" }

[dependencies]
clap.workspace = true
log.workspace = true
mirax-cli.workspace = true
mirax-version.workspace = true
