[package]
name = "serde-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.6", features = ["rand", "rlp", "serde"] }
alloy-rlp = { version = "0.3", features = ["derive"] }
bcs = "0.1"
borsh = { version = "1.3", features = ["derive"] }
bytes = { version = "1.5", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "serialize"
harness = false
path = "benchmark/serialize.rs"

[[bench]]
name = "deserialize"
harness = false
path = "benchmark/deserialize.rs"
