[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ethers = "2.0"
el-sdk = { path = "../" }
tokio = { version = "1.36", features = ["full"] }
url = "2.5"
hex = "0.4"