[package]
name = "intentbook-matchmaker"
version.workspace = true
edition.workspace = true

[dependencies]
solver-common = { path = "../solver-common" }
bindings-khalani = { path = "../crates/bindings-khalani" }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

artemis-core.workspace = true
ethers.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
