[package]
name = "solver-common"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bindings-khalani = { path = "../crates/bindings-khalani" }

artemis-core.workspace = true
tokio.workspace = true
clap.workspace = true
ethers.workspace = true
async-trait.workspace = true
anyhow.workspace = true
alloy-primitives.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
async-stream.workspace = true
thiserror.workspace = true
rusoto_core = { version = "0.48", default-features = false }
rusoto_kms = { version = "0.48", default-features = false }
strum.workspace = true
strum_macros.workspace = true
