[package]
name = "spoke-chain-caller"
version.workspace = true
edition.workspace = true

[dependencies]
solver-common = { path = "../solver-common" }
intentbook-matchmaker = { path = "../intentbook-matchmaker" }
bindings-khalani = { path = "../crates/bindings-khalani" }

artemis-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
ethers.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
serde.workspace = true
